# yolov8_classification

./: README.md  pyproject.toml
yolov8_classificacao/: 0-Coletando_Imagem.ipynb  1-Treinamento_Tutorial.ipynb  2-Retreinig_Tutorial.ipynb  3-Plotar_metricas.ipynb  4-Predict_video.ipynb  predict.py
yolov8_classificacao/lib/: datasetMaker.py
